--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "autoprefixer": "^10.4.13",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.0.3",
+    "ics": "^2.41.0",
+    "mongodb": "^4.12.1",
     "next": "13.0.4",
+    "next-connect": "^0.13.0",
+    "postcss": "^8.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "request": "^2.88.2",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "eslint": "8.27.0",
